compiler/tests/en/errors/unused_func.salam
// EXPECT: E066
func helper(a : int) : int:
    ret a * 2
end

func main:
    __ "hi"
end
